# BlitRenderer

./: BlitzenRenderOnlyPrototype.sln  CMakeLists.txt  README.md
BlitzenRenderOnlyPrototype/: BlitzenRenderOnlyPrototype.vcxproj  BlitzenRenderOnlyPrototype.vcxproj.filters
BlitzenRenderOnlyPrototype/VulkanShaders/: SimpleGeometry.frag  SimpleGeometry.vert.spv  StaticObjectVertexShader.spv  gradient.comp  gradientComp.spv
BlitzenRenderOnlyPrototype/src/Engine/: Main.cpp
BlitzenRenderOnlyPrototype/src/Engine/GameObjects/: Mesh.h
BlitzenRenderOnlyPrototype/src/Engine/Inputs/glfwInputs/: glfwInputs.h
BlitzenRenderOnlyPrototype/src/Rendering/Vulkan/VulkanRenderer/: VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderLoop.cpp  VulkanRenderer.h  VulkanRendererInterface.cpp
VulkanShaders/: CompileShaders.bat  SimpleGeometry.vert.glsl
src/Engine/: Main.cpp
src/Engine/Inputs/glfwInputs/: glfwInputs.cpp  glfwInputs.h
src/Rendering/Vulkan/SDKobjects/: VulkanSDKobjects.cpp  VulkanSDKobjects.h
src/Rendering/Vulkan/VulkanRenderer/: VulkanPipeline.h  VulkanRenderer.h  VulkanSetup.cpp  VulkanShaderData.h
